# olist-analise

./: .gitignore  pyproject.toml
src/notebooks/: 01_exploratory_data_analysis.ipynb  02_sales_analysis.ipynb  03_delivery_performance.ipynb  04_customer_reviews.ipynb  05_text_reviews_analysis.ipynb
src/olist_analise_vendas.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: import_dataframe.py  load_dataframe.py
